# Linux-Learning

./: .gitignore  README.md  google style in c++.md
book-learning/notes/: chapter 1.md
cmake-learning/: README.md  notes.md
cmake-learning/Demo1/: CMakeCache.txt  cmake_install.cmake
cmake-learning/Introduction/Demo1/: CMakeCache.txt  CMakeLists.txt  Demo  Makefile  cmake_install.cmake  main.cc
cmake-learning/Introduction/Demo2/: CMakeCache.txt  CMakeLists.txt  Demo  Makefile  MathFunctions.cc  MathFunctions.h  cmake_install.cmake
cmake-learning/Introduction/Demo3/: CMakeCache.txt  CMakeLists.txt  Demo  Makefile  cmake_install.cmake
cmake-learning/Introduction/Demo3/math/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
cmake-learning/Introduction/Demo4/: CMakeCache.txt  CMakeLists.txt  Demo  Makefile  cmake_install.cmake  main.cc
cmake-learning/Introduction/Demo4/math/: CMakeLists.txt  Makefile  cmake_install.cmake
cmake-learning/Introduction/Demo5/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
cmake-learning/Introduction/Demo5/Testing/Temporary/: CTestCostData.txt
cmake-learning/Introduction/Demo5/math/: CMakeLists.txt  Makefile  cmake_install.cmake
cmake-learning/Introduction/Demo6/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Demo  Makefile  cmake_install.cmake  main.cc
cmake-learning/Introduction/Demo6/math/: CMakeLists.txt  Makefile  cmake_install.cmake
cmake-learning/Introduction/Demo7/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  config.h.in
cmake-learning/Introduction/Demo7/math/: Makefile  cmake_install.cmake
cmake-learning/Introduction/Demo8/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Demo8-1.0.1-Linux.tar.Z  Makefile  cmake_install.cmake  install_manifest.txt  main.cc
cmake-learning/Introduction/Demo8/_CPack_Packages/Linux/STGZ/: Demo8-1.0.1-Linux.sh
cmake-learning/Introduction/Demo8/_CPack_Packages/Linux/STGZ/Demo8-1.0.1-Linux/include/: config.h
cmake-learning/Introduction/Demo8/math/: Makefile  cmake_install.cmake
cmake-learning/cmake-demo/Demo1/: Makefile
cmake-learning/myDemo1/: CMakeCache.txt  CMakeLists.txt  Demo  Makefile  cmake_install.cmake
cmake-learning/myDemo2/: CMakeCache.txt  CMakeLists.txt  Demo  Makefile  cmake_install.cmake
cmake-learning/myDemo3/: CMakeCache.txt  CMakeLists.txt  Demo  Makefile  cmake_install.cmake
cmake-learning/myDemo3/math/: CMakeLists.txt  Makefile  cmake_install.cmake
cmake-learning/myDemo4/: CMakeLists.txt
gdb-learning/: notes.md
gdb-learning/testfiles/: a.out  test.c  test1.c  test_error.c
notes/: chapter 2.md
sys-learning/Day1/: hello.c  notes.md  stdio.h
sys-learning/Day1/test/: c.txt  dirrar.rar
sys-learning/Day10/hw/: cond_cosumer_producer  cond_cosumer_producer.c  died_clock  died_clock.c  mem_producer_consumer  mem_producer_consumer.c  mem_time_hello  mem_time_hello.c
sys-learning/Day10/test/condtest/: cond_produce_consumer  cond_produce_consumer.c
sys-learning/Day10/test/locktest/: Makefile  pthrd_shared  pthrd_shared.c  rwlock  rwlock.c
sys-learning/Day2/hm/: test  test.cpp
sys-learning/Day2/hm/inc/: mystr.h
sys-learning/Day2/hm/resource/: strcat.cpp  strcmp.cpp  (+1 more)
sys-learning/Day4/hw/: Makefile
sys-learning/Day5/hw/: environ  environ.c  extra_2  extra_2.c  for_fork  for_fork.c  getenv  getenv.c  mycat  mycat.c  outfile  testfile
sys-learning/Day6/hw/: exec_ps  exec_ps.c  out1  out1.c  out2  out2.c  pipe  pipe.c  psFile  waitpid  waitpid.c
sys-learning/Day7/hw/: .ps_id_sum.c.swp  ps_id_sum  ps_id_sum.c
sys-learning/Day8/hw/: alarm  alarm.c  catch_child  catch_child.c  kill  kill.c  setitimer  setitimer.c  sigaction1  sigaction1.c  sigaction2  sigaction2.c  sigaction3  sigaction3.c  sigpending  sigpending.c
sys-learning/Day9/hw/: daemon_session  daemon_session.c  glb_var_pthrd  glb_var_pthrd.c  pthread_loop_join  pthread_loop_join.c  session  session.c
sys-learning/Day9/test/: .pthread_more.c.swp  pthread_attr_change.c  pthread_attr_detach  pthread_attr_detach.c  pthread_cancel  pthread_cancel.c  pthread_create  pthread_create.c  pthread_detach  pthread_detach.c  pthread_endof3  pthread_endof3.c  pthread_exit  pthread_exit.c  pthread_join  pthread_join.c  pthread_more  pthread_more.c  pthread_more_err  pthread_more_err.c  session_daemon  session_daemon.c
第一部分 linux的规则与安装/Chapter 0 计算机概论/: notes.md
(+207 files in other folders)
